[gd_scene load_steps=19 format=3 uid="uid://ia4ouu4k3uqs"]

[ext_resource type="Script" uid="uid://blqrjo76nxlwp" path="res://levels/main_level.gd" id="1_vx07q"]
[ext_resource type="Script" uid="uid://b3u8w1ba8beq4" path="res://ChapterManager.gd" id="2_e7con"]
[ext_resource type="PackedScene" uid="uid://kml8qcwn13ln" path="res://Interaction/Items/Key/Key.tscn" id="3_yr0xy"]
[ext_resource type="PackedScene" uid="uid://d1yuremrc1v62" path="res://Interaction/Items/PowerCell/power_cell.tscn" id="4_57428"]
[ext_resource type="PackedScene" uid="uid://bfpe0mf4u838k" path="res://DemoPlayer/demo_player.tscn" id="8_4gt88"]
[ext_resource type="AudioStream" uid="uid://jbfmmexr8eto" path="res://DemoPlayer/footsteps-in-a-hallway-47842.mp3" id="9_bv0m5"]
[ext_resource type="AudioStream" uid="uid://dj323cftpppt" path="res://DemoPlayer/hello-46355.mp3" id="12_t6wdf"]
[ext_resource type="AudioStream" uid="uid://cxdnp58nqulkc" path="res://Interaction/Ladder/horror-background-atmosphere-156462.mp3" id="13_p6yen"]
[ext_resource type="AudioStream" uid="uid://c5erse0fndj35" path="res://DemoPlayer/mixkit-terror-radio-frequency-2566.wav" id="14_n00sm"]
[ext_resource type="AudioStream" uid="uid://bg4wf0knnrqj0" path="res://DemoPlayer/breathing-160445.mp3" id="15_bv0m5"]
[ext_resource type="PackedScene" uid="uid://c52grvp5s1nhh" path="res://collhouse.tscn" id="16_bv0m5"]
[ext_resource type="AudioStream" uid="uid://d3im5fd4625wj" path="res://heartbeat-01-brvhrtz-225058.mp3" id="16_vy62f"]
[ext_resource type="PackedScene" uid="uid://lv5ah8lvreft" path="res://Interaction/Furniture/Drawer.tscn" id="17_bdauj"]
[ext_resource type="Script" uid="uid://bn818r2udrwdk" path="res://levels/video_stream_player.gd" id="17_vy62f"]
[ext_resource type="AudioStream" uid="uid://byvlrupcf10tw" path="res://DemoPlayer/mixkit-angry-dragon-growl-309.wav" id="21_gdgmy"]
[ext_resource type="PackedScene" uid="uid://bd5bcum8ag82o" path="res://bigmuseumcol.tscn" id="24_ss25c"]
[ext_resource type="PackedScene" uid="uid://cvw733ummayth" path="res://house_monster.tscn" id="25_ss25c"]

[sub_resource type="Environment" id="Environment_bv0m5"]
glow_enabled = true
glow_intensity = 0.84
glow_bloom = 0.33
fog_enabled = true
fog_light_color = Color(0, 0, 0, 1)

[node name="DemoLevel" type="Node3D"]
script = ExtResource("1_vx07q")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bv0m5")

[node name="ChapterManager" type="Node" parent="."]
script = ExtResource("2_e7con")
metadata/_custom_type_script = "uid://b3u8w1ba8beq4"

[node name="DemoPlayer" parent="." groups=["player"] instance=ExtResource("8_4gt88")]
transform = Transform3D(0.656942, 0, 0, 0, 0.814077, 0, 0, 0, 0.56224, 0.869045, -2.74925, -17.9708)
visible = false

[node name="Items" type="Node3D" parent="."]

[node name="key" parent="Items" instance=ExtResource("3_yr0xy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.83513, -0.245674, -24.2256)

[node name="Power Cell" parent="Items" instance=ExtResource("4_57428")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.91511, -3.57836, -42.8767)

[node name="Power Cell2" parent="Items" instance=ExtResource("4_57428")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.82687, 0, 3.06639)

[node name="Power Cell3" parent="Items" instance=ExtResource("4_57428")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.9839, 0.611335, 60.4437)

[node name="Power Cell4" parent="Items" instance=ExtResource("4_57428")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 55.5797, -0.063809, -14.6186)
collision_layer = 9

[node name="Power Cell5" parent="Items" instance=ExtResource("4_57428")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.8018, 1.16344, 34.3741)

[node name="Power Cell6" parent="Items" instance=ExtResource("4_57428")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.84602, 0.146397, -7.3197)

[node name="VoicePlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("12_t6wdf")
volume_db = 53.333

[node name="brmusic" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("13_p6yen")
volume_db = -22.246
unit_size = 100.0
autoplay = true
max_distance = 4096.0

[node name="breath" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("15_bv0m5")
volume_db = -18.381
autoplay = true
parameters/looping = true

[node name="FootstepPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_bv0m5")
volume_db = 57.436
unit_size = 1.0
max_distance = 4096.0

[node name="FootstepTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 45.798, -0.604, 126.99)
stream = ExtResource("16_vy62f")
volume_db = -22.519

[node name="AudioStreamPlayer3D2" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 45.798, -0.604, 126.99)
stream = ExtResource("21_gdgmy")
volume_db = 47.225

[node name="scarysound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, -2.9556e-11, -1.65034e-19, 2.9556e-11, 1, 1.8585e-09, 0, -1.8585e-09, 1, 9.53674e-07, 7.15256e-07, -9.53674e-07)
stream = ExtResource("14_n00sm")
volume_db = -20.148
autoplay = true

[node name="Sketchfab_Scene" parent="." instance=ExtResource("16_bv0m5")]
transform = Transform3D(2.04677, 0, 0, 0, 1, 0, 0, 0, 3.80214, 45.798, 20.9833, 420.286)
visible = false

[node name="HouseMonster" parent="." instance=ExtResource("25_ss25c")]
transform = Transform3D(0.0207184, 0, 0, 0, 0.0257714, 0, 0, 0, 0.0250817, 47.5593, -2.40787, -21.4219)

[node name="HouseMonster2" parent="." instance=ExtResource("25_ss25c")]
transform = Transform3D(0.0227412, 0, 0, 0, 0.0261021, 0, 0, 0, 0.0233304, 32.256, 6.39275, -125.392)

[node name="HouseMonster3" parent="." instance=ExtResource("25_ss25c")]
transform = Transform3D(0.0227412, 0, 0, 0, 0.0261021, 0, 0, 0, 0.0233304, -8.65854, 1.29856, 152.595)

[node name="HouseMonster4" parent="." instance=ExtResource("25_ss25c")]
transform = Transform3D(0.0226058, -0.00284437, 0, 0.00247813, 0.0259467, 0, 0, 0, 0.0233304, -24.1864, 1.20881, 81.3407)

[node name="HouseMonster5" parent="." instance=ExtResource("25_ss25c")]
transform = Transform3D(0.0227412, 0, 0, 0, 0.0261021, 0, 0, 0, 0.0233304, 25.1769, 1.81687, 17.0711)

[node name="Sketchfab_Scene2" parent="." instance=ExtResource("24_ss25c")]
transform = Transform3D(0.505167, 0, 0, 0, 0.511603, 0, 0, 0, 0.625747, 1.75981, -3.80904, -19.3353)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_n00sm")
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="CanvasLayer"]
offset_right = 2961.0
offset_bottom = 1782.0
scale = Vector2(1.6, 1.56)
volume_db = -80.0
script = ExtResource("17_vy62f")

[node name="DragInteraction" parent="." instance=ExtResource("17_bdauj")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0.0179087, -3.36954, -25.7042)
visible = false

[node name="CollectibleItem" parent="." instance=ExtResource("3_yr0xy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.930633, -2.77378, -18.1541)
